# a-method-for-porting-software-using-formal-specifications

./: .gitmodules  README.md
paper/: background.tex  citations.bib  conclusion.tex  discussion.tex  implementation.tex  introduction.tex  listings-rust.sty  main.tex  method.tex  paper.aux  paper.out  paper.tex  paper.toc  result.tex
reimplementation/rust_slist/: .gitignore  Cargo.toml  README.md  gen_lib_bindings.sh  rust_lib.h
reimplementation/rust_slist/singly_linked_list/: Cargo.toml
reimplementation/rust_slist/singly_linked_list/src/: lib.rs  singly_linked_list_array.rs  singly_linked_list_safe.rs  singly_linked_list_unsafe.rs
reimplementation/rust_slist/singly_linked_list_array/: .gitignore  Cargo.toml
reimplementation/rust_slist/singly_linked_list_array/src/: lib.rs
reimplementation/rust_slist/src/: interface_arr.rs  interface_uns.rs  lib.rs
reimplementation/unsafe_slist/: Cargo.toml  README.md  gen_lib_bindings.sh  rust_lib.h
reimplementation/unsafe_slist/singly_linked_list_unsafe/: Cargo.toml
reimplementation/unsafe_slist/singly_linked_list_unsafe/src/: lib.rs
reimplementation/unsafe_slist/src/: lib.rs  some.rs
source_tests/: .gitignore  CMakeLists.txt  CMakeLists.txt.rc  README.md  coverage_report.sh  generate_c_lib.sh  generate_lib.sh  integerlists.h  main.cpp  queue.h  test.cpp
source_tests/src/: SOMEFILE  queue.h  queue_impl.cpp  queue_impl.h  queue_impl_expanded.cpp  queue_impl_nonexpanded.cpp
source_tests/src/clibsrc/: singly_linked_list_c.cpp  singly_linked_list_c.h
source_tests/test/: LIST_model_test.cpp  LIST_test.cpp  SLIST_model_test.cpp  SLIST_test.cpp  STAILQ_model_test.cpp  STAILQ_test.cpp  TAILQ_model_test.cpp  TAILQ_test.cpp  lib_agnostic_SLIST_test.cpp  test.cpp
source_tests/test/lib_impl/: C_lib.cpp  C_lib.h  Clib_impl.cpp  Clib_impl.h  LinkedListLib.h  RustLib.cpp  RustLib_Uns.cpp
spec/: .gitignore  LinkedList.tla  README.md  main.tla
verification/: .gitignore  CMakeLists.txt  README.md  generate_lib.sh
verification/src/: queue.h  queue_impl.cpp  queue_impl.h
verification/test/: lib_agnostic_SLIST_test.cpp
verification/test/lib_impl/: C_lib.cpp  LinkedListLib.h
