[package]
name = "singly_linked_list"
version = "0.1.0"
authors = ["Magnus <krummelur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
quickcheck = "1"
lazy_static = "1.4.0"
singly_linked_list_unsafe = { path = "./singly_linked_list_unsafe" }